Upped to Java 17 (#39)
- Upped to Java 17