@@ -28,11 +28,9 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.regex.Pattern;
@@ -43,10 +41,12 @@ import static bomb.tools.pattern.facade.FacadeFX.GET_TOGGLE_NAME;
 import static bomb.tools.pattern.observer.ObserverHub.ObserverIndex.BLIND_ALLEY_PANE;
 import static bomb.tools.pattern.observer.ObserverHub.ObserverIndex.SOUVENIR_PANE;
 import static java.util.function.UnaryOperator.identity;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
+@SuppressWarnings("ConstantConditions")
 public class ManualController {
+    private static final String FXML_DIRECTORY = "fxml";
+
     private Map<Toggle, Region> regionMap;
     private final List<Node> allRadioButtons;
 
@@ -73,7 +73,10 @@ public class ManualController {
         allRadioButtons.addAll(radioButtonHouse.getChildren());
         ObserverHub.addObserver(new ForgetMeNotToggleObserver(forgetMeNot));
         ObserverHub.addObserver(new SouvenirToggleObserver(souvenir));
+        long start = System.nanoTime();
         regionMap = setupRegionMap().get();
+        long stop = System.nanoTime();
+        System.out.printf("Timer: %,d", stop - start);
     }
 
     @FXML
@@ -103,14 +106,14 @@ public class ManualController {
 
         Regex searchPattern = new Regex(searchTerm, Pattern.CASE_INSENSITIVE);
 
-        List<Node> resultingButtons = allRadioButtons.stream()
-                .filter(radioButton -> {
-                    String name = ((RadioButton) radioButton).getText();
-                    searchPattern.loadText(name);
-                    return searchPattern.hasMatch();
-                })
-                .collect(toList());
-        radioButtonHouse.getChildren().addAll(resultingButtons);
+        radioButtonHouse.getChildren().addAll(
+                allRadioButtons.stream()
+                        .filter(radioButton -> {
+                            String name = ((RadioButton) radioButton).getText();
+                            searchPattern.loadText(name);
+                            return searchPattern.hasMatch();
+                        }).toList()
+        );
     }
 
     private CompletableFuture<Map<Toggle, Region>> setupRegionMap() {
@@ -127,10 +130,10 @@ public class ManualController {
         ResetObserver resetObserver = new ResetObserver();
 
         CompletableFuture<Map<String, Region>> future = CompletableFuture.supplyAsync(
-                () -> ManualController.class.getResource("fxml"))
+                () -> ManualController.class.getResource(FXML_DIRECTORY))
                 .thenApply(ManualController::toURI)
                 .handle((path, ex) -> {
-                    if (ex != null){
+                    if (ex != null) {
                         ex.printStackTrace();
                         System.exit(-1);
                     }
@@ -138,18 +141,22 @@ public class ManualController {
                 })
                 .thenApply(File::new)
                 .thenApply(ManualController::getFilesFromDirectory)
-                .thenApply(Collection::stream)
-                .thenApply(stream -> stream.filter(location -> !location.contains("solutions")))
-                .thenApply(stream -> stream.filter(location -> !location.contains("old")))
-                .thenApply(stream -> stream.filter(location -> !location.contains("new")))
-                .thenApply(stream -> stream.collect(toMap(
-                        location -> filter(location, filenamePattern)
-                                .replace(".", ""),
-                        location -> createSingleRegion(location, resetObserver)
-                )));
+                .thenApply(list -> convertFilesToRegions(list, resetObserver, filenamePattern));
 
         ObserverHub.addObserver(resetObserver);
         return future;
+    }
+
+    private static Map<String, Region> convertFilesToRegions(List<String> fileList, ResetObserver resetObserver,
+                                                             Regex filenamePattern) {
+        return fileList.stream()
+                .filter(location -> !location.contains("solutions")
+                        && !location.contains("old") && !location.contains("new"))
+                .collect(toMap(
+                        location -> filter(location, filenamePattern)
+                                .replace(".", ""),
+                        location -> createSingleRegion(location, resetObserver)
+                ));
     }
 
     private static CompletableFuture<Map<String, Toggle>> createRadioButtonNameFuture(List<Toggle> radioButtonList) {
@@ -201,7 +208,7 @@ public class ManualController {
 
     private static List<String> getFilesFromDirectory(final File topLevelDirectory) throws NullPointerException {
         List<String> list = new ArrayList<>();
-        for (final File fileEntry : Objects.requireNonNull(topLevelDirectory.listFiles())) {
+        for (final File fileEntry : topLevelDirectory.listFiles()) {
             if (fileEntry.isDirectory())
                 list.addAll(getFilesFromDirectory(fileEntry));
             else
@@ -211,13 +218,14 @@ public class ManualController {
     }
 
     private static Map<Toggle, Region> createRegionMap(Map<String, Toggle> radioButtonMap,
-                                                Map<String, Region> filePathMap) {
+                                                       Map<String, Region> filePathMap) {
         Map<Toggle, Region> regionMap = new IdentityHashMap<>();
-        radioButtonMap.keySet()
-                .forEach(key -> regionMap.put(
-                        radioButtonMap.get(key),
-                        filePathMap.get(key)
-                        ));
+
+        for (Map.Entry<String, Toggle> entry : radioButtonMap.entrySet())
+            regionMap.put(
+                    entry.getValue(),
+                    filePathMap.get(entry.getKey())
+            );
         return regionMap;
     }
 
